--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo website Assignment</title>
+    <title>Assignment Website</title>
 
-   <link rel="stylesheet" href="style/style.css">
+<link rel="stylesheet" href="styles/style.css">
 
 </head>
 <body>
-    
+    <div class="bg">
+        <div class="content">
+            <img class="content-img" src="assets/Group.png" alt="background image">
+            <h1 class="heading-bg">"In the near future, I hope to
+                become a Developer."</h1>
+            <p class="content-des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, consequuntur!</p>
+            <button class="bg-btn">contact with me</button>
+        </div>
+    </div>
 </body>
 </html>
