--- a/index.html
+++ b/index.html
@@ -1,22 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment Website</title>
 
-<link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 
 </head>
+
 <body>
     <div class="bg">
         <div class="content">
             <img class="content-img" src="assets/Group.png" alt="background image">
-            <h1 class="heading-bg">"In the near future, I hope to
-                become a Developer."</h1>
-            <p class="content-des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, consequuntur!</p>
-            <button class="bg-btn">contact with me</button>
+            <div class="div-content">
+                <h1 class="heading-bg">"In the near future, I hope to
+                    become a Developer."</h1>
+                <p class="content-des">I am a highly analytical front-end developer with expertise in HTML, CSS, JavaScript,
+                    and various front-end frameworks.</p>
+                <button class="bg-btn">Contact with me</button>
+            </div>
         </div>
     </div>
+
+    <section class="section-2">
+        <div class="section-2-bg">
+            <h1 class="heading-sec-2">Why Web Development??</h1>
+            <p class="des-sec-2">
+                In a nutshell, web development is certainly a promising career choice, offering ample benefits and opportunities.
+            </p>
+        </div>
+        <div class="sec-2-main">
+            <div class="sec-2-main1">
+                <h3 class="cmn-heading">I will Do Coding and Change The World</h3>
+                <p class="cmn-para">
+                    Technology is vast and there are plenty of job opportunities available if you know how to code. Programmers are high in demand all over the world.
+                </p>
+                <button class="cmn-btn-LM"> Learn More</button>
+            </div>
+            <img src="assets/Layer_1.png" alt="">
+        </div>
+        <div class="sec-2-main">
+            <img src="assets/Group 3.png" alt="">
+            <div class="sec-2-main1">
+                <h3 class="cmn-heading">I will Do Coding and Change The World</h3>
+                <p class="cmn-para">
+                    Technology is vast and there are plenty of job opportunities available if you know how to code. Programmers are high in demand all over the world.
+                </p>
+                <button class="cmn-btn-LM"> Learn More</button>
+            </div>
+           
+        </div>
+        <div class="sec-2-main">
+            <div class="sec-2-main1">
+                <h3 class="cmn-heading">I will Do Coding and Change The World</h3>
+                <p class="cmn-para">
+                    Technology is vast and there are plenty of job opportunities available if you know how to code. Programmers are high in demand all over the world.
+                </p>
+                <button class="cmn-btn-LM"> Learn More</button>
+            </div>
+            <img src="assets/Group 4.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
