Inspiration section commit

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <div class="sec-2-main">
             <img src="assets/Group 3.png" alt="">
             <div class="sec-2-main1">
-                <h3 class="cmn-heading">I will Do Coding and Change The World</h3>
+                <h3 class="cmn-heading">I will help People by creating Modern Web System</h3>
                 <p class="cmn-para">
-                    Technology is vast and there are plenty of job opportunities available if you know how to code. Programmers are high in demand all over the world.
+                    I can help you by solving your problems. I can solve analytical problems, mathematical problems and programming problems.
                 </p>
                 <button class="cmn-btn-LM"> Learn More</button>
             </div>
@@ -54,14 +54,28 @@
         </div>
         <div class="sec-2-main">
             <div class="sec-2-main1">
-                <h3 class="cmn-heading">I will Do Coding and Change The World</h3>
+                <h3 class="cmn-heading">I will Develope innovative software.</h3>
                 <p class="cmn-para">
-                    Technology is vast and there are plenty of job opportunities available if you know how to code. Programmers are high in demand all over the world.
+                    I'm a software developer. I can develope various type of softwars. Such as Utility Software, Shareware, Driver software, Multimedia software etc.
                 </p>
                 <button class="cmn-btn-LM"> Learn More</button>
             </div>
             <img src="assets/Group 4.png" alt="">
         </div>
+    </section>
+
+    <section class="inspiration">
+        <div class="div-ins">
+            <h1 class="ins-heading">My Inspiration</h1>
+            <p class="des-sec-2">
+                My inspiration is my teachers.A teacher affects eternity; he can never tell where his influence stops.
+            </p>
+        </div>
+
+        <div class="vdo">
+            <iframe width="1075" height="550" src="https://www.youtube.com/embed/Mebm4k2v8Vw?si=kECaCyF2XNJjIies" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
     </section>
 </body>
 
