Target section commit

--- a/index.html
+++ b/index.html
@@ -77,6 +77,28 @@
         </div>
 
     </section>
+    <section class="targets">
+
+        <h1 class="T-title text-center">My current target</h1>
+        <p class="t-description text-center">Learning the following skills are my current target. </p>
+        <div class="skill-container">
+            <div class="skill">
+                <img src="assets/html.png" alt="">
+                <h4 class="skill-title">HTML</h4>
+                <p class="skill-description"> Hyper text markup language</p>
+            </div>
+            <div class="skill">
+                <img src="assets/css.png" alt="">
+                <h4 class="skill-title">CSS</h4>
+                <p class="skill-description"> Cascading style sheet</p>
+            </div>
+            <div class="skill">
+                <img src="assets/js.png" alt="">
+                <h4 class="skill-title">JavaScript</h4>
+                <p class="skill-description">JavaScript is a scripting or programming language</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
