skill section commit

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <div class="div-content">
                 <h1 class="heading-bg">"In the near future, I hope to
                     become a Developer."</h1>
-                <p class="content-des">I am a highly analytical front-end developer with expertise in HTML, CSS, JavaScript,
+                <p class="content-des">I am a highly analytical front-end developer with expertise in HTML, CSS,
+                    JavaScript,
                     and various front-end frameworks.</p>
                 <button class="bg-btn">Contact with me</button>
             </div>
@@ -28,14 +29,16 @@
         <div class="section-2-bg">
             <h1 class="heading-sec-2">Why Web Development??</h1>
             <p class="des-sec-2">
-                In a nutshell, web development is certainly a promising career choice, offering ample benefits and opportunities.
+                In a nutshell, web development is certainly a promising career choice, offering ample benefits and
+                opportunities.
             </p>
         </div>
         <div class="sec-2-main">
             <div class="sec-2-main1">
                 <h3 class="cmn-heading">I will Do Coding and Change The World</h3>
                 <p class="cmn-para">
-                    Technology is vast and there are plenty of job opportunities available if you know how to code. Programmers are high in demand all over the world.
+                    Technology is vast and there are plenty of job opportunities available if you know how to code.
+                    Programmers are high in demand all over the world.
                 </p>
                 <button class="cmn-btn-LM"> Learn More</button>
             </div>
@@ -46,17 +49,19 @@
             <div class="sec-2-main1">
                 <h3 class="cmn-heading">I will help People by creating Modern Web System</h3>
                 <p class="cmn-para">
-                    I can help you by solving your problems. I can solve analytical problems, mathematical problems and programming problems.
+                    I can help you by solving your problems. I can solve analytical problems, mathematical problems and
+                    programming problems.
                 </p>
                 <button class="cmn-btn-LM"> Learn More</button>
             </div>
-           
+
         </div>
         <div class="sec-2-main">
             <div class="sec-2-main1">
                 <h3 class="cmn-heading">I will Develope innovative software.</h3>
                 <p class="cmn-para">
-                    I'm a software developer. I can develope various type of softwars. Such as Utility Software, Shareware, Driver software, Multimedia software etc.
+                    I'm a software developer. I can develope various type of softwars. Such as Utility Software,
+                    Shareware, Driver software, Multimedia software etc.
                 </p>
                 <button class="cmn-btn-LM"> Learn More</button>
             </div>
@@ -73,7 +78,10 @@
         </div>
 
         <div class="vdo">
-            <iframe width="1075" height="550" src="https://www.youtube.com/embed/Mebm4k2v8Vw?si=kECaCyF2XNJjIies" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="1075" height="550" src="https://www.youtube.com/embed/Mebm4k2v8Vw?si=kECaCyF2XNJjIies"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
     </section>
@@ -82,20 +90,23 @@
         <h1 class="T-title text-center">My current target</h1>
         <p class="t-description text-center">Learning the following skills are my current target. </p>
         <div class="skill-container">
-            <div class="skill">
+            <div class="skill-1">
                 <img src="assets/html.png" alt="">
                 <h4 class="skill-title">HTML</h4>
                 <p class="skill-description"> Hyper text markup language</p>
+                <a class="anchor-skill" href="">Learn More</a>
             </div>
-            <div class="skill">
+            <div class="skill-2">
                 <img src="assets/css.png" alt="">
                 <h4 class="skill-title">CSS</h4>
                 <p class="skill-description"> Cascading style sheet</p>
+                <a class="anchor-skill" href="">Learn More</a>
             </div>
-            <div class="skill">
+            <div class="skill-3">
                 <img src="assets/js.png" alt="">
                 <h4 class="skill-title">JavaScript</h4>
                 <p class="skill-description">JavaScript is a scripting or programming language</p>
+                <a class="anchor-skill" href="">Learn More</a>
             </div>
         </div>
     </section>
