footer section commit

--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
         <div class="content">
             <img class="content-img" src="assets/Group.png" alt="background image">
             <div class="div-content">
-                <h1 class="heading-bg">"In the near future, I hope to
-                    become a Developer."</h1>
+                <h1 class="heading-bg">"In the near future, I hope to become a Developer."</h1>
                 <p class="content-des">I am a highly analytical front-end developer with expertise in HTML, CSS,
-                    JavaScript,
-                    and various front-end frameworks.</p>
-                <button class="bg-btn">Contact with me</button>
+                    JavaScript, and various front-end frameworks.</p>
+                <a href="#bottom"><button class="bg-btn">Contact with me</button></a>
             </div>
         </div>
     </div>
@@ -85,6 +83,7 @@
         </div>
 
     </section>
+
     <section class="targets">
 
         <h1 class="T-title text-center">My current target</h1>
@@ -110,6 +109,38 @@
             </div>
         </div>
     </section>
+
+    <section class="support">
+        <div class="container">
+            <div>
+                <h1 class="support-heading">I need Support</h1>
+                <p class="support-para"> Have quaries? Search bellow</p>
+            </div>
+            <div class="input-text">
+                <input class="input-box" type="text" name="quaries?" id="" placeholder="Suggest me any feedback for me">
+                <button class="search-btn">Search</button>
+            </div>
+        </div>
+    </section>
 </body>
+<footer id="bottom">
+    
+    <p class="footer-para"> All rights reserved</p>
+    <ul class="footer-list">
+        <li>
+            <a href="https://www.facebook.com/"><img src="assets/facebook.png" alt=""></a>
+        </li>
+        <li>
+            <a href="https://github.com/">
+                <img src="assets/github.png" alt="">
+            </a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/"> 
+                <img src="assets/linkedin-icon 1.png" alt="">
+            </a>
+        </li>
+    </ul>
+</footer>
 
 </html>
